--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -15,9 +15,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans_light"
+            android:fontFamily="@font/open_sans_bold"
             android:text="@string/register_text"
-            android:textColor="@color/space"
+            android:textColor="@color/colorPrimary"
 
             android:textSize="22dp" />
         <LinearLayout
@@ -35,14 +35,16 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_light"
                 >
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edt_first_name"
+                    android:textColorHint="@color/dark_gray"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/space"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:fontFamily="@font/open_sans_light"
                     android:hint="@string/first_name"
-                    android:fontFamily="@font/open_sans_light"/>
+                    android:textColor="@color/space" />
 
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +58,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edt_last_name"
+                    android:textColorHint="@color/dark_gray"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/space"
@@ -76,16 +79,74 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_phone_number"
                 android:layout_width="match_parent"
+                android:textColorHint="@color/dark_gray"
                 android:layout_height="wrap_content"
                 android:textColor="@color/space"
                 android:hint="@string/phone_number"
+                android:fontFamily="@font/open_sans_light"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/open_sans_light">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="number"
+                android:textColorHint="@color/dark_gray"
+                android:id="@+id/edt_id_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/space"
+                android:hint="@string/id_number"
+                android:fontFamily="@font/open_sans_light"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/open_sans_light">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_drive_license"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/dark_gray"
+                android:textColor="@color/space"
+                android:hint="@string/drive_license"
+                android:fontFamily="@font/open_sans_light"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/open_sans_light">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_motor_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/space"
+                android:textColorHint="@color/dark_gray"
+                android:hint="@string/motor_type"
+                android:fontFamily="@font/open_sans_light"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/open_sans_light">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_vehicle_license"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/space"
+                android:textColorHint="@color/dark_gray"
+                android:hint="@string/vehicle_license_number"
                 android:fontFamily="@font/open_sans_light"/>
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_register"
-        android:backgroundTint="@color/space"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
