--- a/app/src/main/res/layout/layout_sign_in.xml
+++ b/app/src/main/res/layout/layout_sign_in.xml
@@ -2,9 +2,22 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rider_splash_screen"
+    android:background="@color/lightGray"
     android:padding="16dp">
-    
+
+    <ImageView
+        android:layout_width="257dp"
+        android:layout_height="391dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="143dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="266dp"
+        android:src="@drawable/applogo" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,10 +33,10 @@
             android:padding="16dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_selector"
-            android:textColor="@android:color/white"
+            android:textColor="@color/lightGray"
             android:text="Sign in with Phone"
             android:drawableStart="@drawable/ic_baseline_phone_24"
-            android:drawableTint="@android:color/white"/>
+            android:drawableTint="@color/lightGray"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,10 +44,9 @@
             android:padding="16dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_selector"
-            android:textColor="@android:color/white"
+            android:textColor="@color/lightGray"
             android:text="Sign in with Email"
             android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
-            android:drawableTint="@android:color/white"
             />
 
     </LinearLayout>
