--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FF6600</color>
+    <color name="colorPrimaryDark">#FF6600</color>
+    <color name="colorAccent">#FF6600</color>
     <color name="lightGray">#ECECEC</color>
     <color name="blue">#5C9DC0</color>
     <color name="space">#181C1F</color>
     <color name="progress_bar_color">#151828</color>
     <color name="dark_gray">#656565</color>
     <color name="startuber">#227159</color>
+    <color name="blackpos">#212020</color>
 </resources>
