--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
 
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">false</item>
-        <item name="android:windowBackground">@drawable/rider_splash_screen</item>
+        <item name="android:windowBackground">@color/lightGray</item>
     </style>
 
     <style name="LoginTheme" parent="FirebaseUI">
