--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/open_sans_light"
-        android:text="Pergi di jemput, pulang diantar"
+        android:text="Pasti Sampai"
         android:textColor="@color/lightGray"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
