--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,68 @@
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layout_info_bojek"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_margin="20dp"
+        android:background="@color/lightGray"
+        app:cardCornerRadius="8dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:fontFamily="@font/open_sans_light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/space"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text="Selamat Datang, Mitra Driver GoPos"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            <TextView
+                android:fontFamily="@font/open_sans_bold"
+                android:id="@+id/txt_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text="@string/nav_header_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+            <TextView
+                android:fontFamily="@font/open_sans_light"
+                android:id="@+id/txt_phone"
+                android:layout_width="wrap_content"
+                android:textColor="@color/space"
+                android:layout_height="wrap_content"
+                android:text="@string/nav_header_subtitle" />
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:id="@+id/txt_motor_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/space"
+                android:text="aerox" />
+            <TextView
+                android:fontFamily="@font/open_sans_bold"
+                android:id="@+id/txt_vehicle_number"
+                android:layout_width="wrap_content"
+                android:textColor="@color/space"
+                android:layout_height="wrap_content"
+                android:text="B 1234 WOK" />
+        </LinearLayout>
+
+
+
+    </androidx.cardview.widget.CardView>
+
     <com.google.android.material.chip.Chip
         android:theme="@style/Theme.MaterialComponents.Light"
         android:id="@+id/chip_decline"
@@ -42,11 +104,25 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="16dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/type_order"
+                android:layout_gravity="center_horizontal"
+                android:text="Tipe Order"
+                android:layout_marginRight="2dp"
+                android:textColor="@color/lightGray"
+                android:textSize="20dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:textAlignment="center"
+                />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -85,7 +161,9 @@
                         android:clickable="false"
                         app:tint="@color/lightGray"
                         android:src="@drawable/ic_baseline_person_24"/>
+
                 </RelativeLayout>
+
 
                 <TextView
                     android:layout_width="wrap_content"
