sound and revamp layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_gray">#656565</color>
     <color name="startuber">#227159</color>
     <color name="blackpos">#212020</color>
+    <color name="greenbutton">#4CAF50</color>
 </resources>
