--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,74 +20,117 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_margin="20dp"
-        android:background="@color/lightGray"
-        app:cardCornerRadius="8dp">
+        android:backgroundTint="@color/colorPrimary">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-8dp"
             android:padding="16dp"
             android:orientation="vertical">
-
-            <TextView
-                android:fontFamily="@font/open_sans_light"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="@color/space"
-                android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="Selamat Datang, Mitra Driver GoPos"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-            <TextView
-                android:fontFamily="@font/open_sans_bold"
-                android:id="@+id/txt_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="@string/nav_header_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                android:orientation="horizontal">
+                <TextView
+                    android:fontFamily="@font/open_sans_bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:text="Selamat Datang, " />
+                <TextView
+                    android:fontFamily="@font/open_sans_bold"
+                    android:id="@+id/txt_name"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nav_header_title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            </LinearLayout>.=
 
             <TextView
                 android:fontFamily="@font/open_sans_light"
                 android:id="@+id/txt_phone"
                 android:layout_width="wrap_content"
-                android:textColor="@color/space"
+                android:textSize="12sp"
+                android:textColor="@color/white"
                 android:layout_height="wrap_content"
                 android:text="@string/nav_header_subtitle" />
 
-            <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4sp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:fontFamily="@font/open_sans_bold"
+                    android:id="@+id/txt_motor_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/Black"
+                    android:text="aerox" />
+                <TextView
+                    android:fontFamily="@font/open_sans_bold"
+                    android:id="@+id/txt_vehicle_number"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/Black"
+                    android:layout_marginLeft="12dp"
+                    android:layout_height="wrap_content"
+                    android:text="B 1234 WOK" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/open_sans_bold"
-                android:id="@+id/txt_motor_type"
-                android:layout_width="wrap_content"
+                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:textColor="@color/space"
-                android:text="aerox" />
-            <TextView
-                android:fontFamily="@font/open_sans_bold"
-                android:id="@+id/txt_vehicle_number"
-                android:layout_width="wrap_content"
-                android:textColor="@color/space"
-                android:layout_height="wrap_content"
-                android:text="B 1234 WOK" />
+                android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/rating_star"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_baseline_star_24"
+                        app:tint="@color/white" />
+                    <TextView
+                        android:layout_toEndOf="@id/rating_star"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:id="@+id/txt_rating_home"
+                        android:textColor="@color/white"
+                        android:text="5.0" />
+                    <Button
+                        android:id="@+id/btn_topup"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Top Up"
+                        android:textSize="12sp"
+                        android:layout_centerHorizontal="true"
+                        android:textColor="@color/colorPrimary"
+                        android:backgroundTint="@color/white"/>
+                    <RadioButton
+                        android:layout_alignParentEnd="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Mode aktif"
+                        android:focusedByDefault="true"
+                        android:textColor="@color/white"/>
+                </RelativeLayout>
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
 
     </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.chip.Chip
-        android:theme="@style/Theme.MaterialComponents.Light"
-        android:id="@+id/chip_decline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/decline"
-        android:textColor="@color/lightGray"
-        android:visibility="gone"
-        app:chipBackgroundColor="@color/blackpos"
-        app:chipIcon="@drawable/ic_baseline_clear_24"
-        app:chipIconTint="@color/lightGray"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -99,92 +142,80 @@
         app:cardCornerRadius="12dp"
         android:visibility="gone">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-            android:padding="16dp">
-            <TextView
+            android:padding="4dp"
+            android:orientation="horizontal">
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/type_order"
-                android:layout_gravity="center_horizontal"
-                android:text="Tipe Order"
-                android:layout_marginRight="2dp"
-                android:textColor="@color/Black"
-                android:textSize="20dp"
-                android:layout_marginBottom="5dp"
-                android:fontFamily="@font/open_sans_bold"
-                android:textAlignment="center"
-                />
+                android:clickable="false"
+                android:layout_marginLeft="22dp"
+                android:layout_gravity="center_vertical">
+                <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                    android:id="@+id/circularProgressBar"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    app:cpb_background_progressbar_color="@color/colorPrimary"
+                    app:cpb_background_progressbar_width="3dp"
+                    app:cpb_progress="0"
+                    app:cpb_progress_direction="to_right"
+                    app:cpb_progressbar_width="3dp"
+                    android:layout_gravity="center_horizontal"
+                    app:cpb_progressbar_color="@color/progress_bar_color"
+                    app:cpb_round_border="false"/>
+                <ImageView
+                    android:id="@+id/img_round"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center_horizontal"
+                    android:clickable="false"
+                    app:tint="@color/colorPrimary"
+                    android:src="@drawable/ic_baseline_person_24"/>
+
+            </RelativeLayout>
+
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
+                android:layout_marginLeft="12dp"
+                android:padding="4dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/type_order"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Tipe Order"
+                    android:textColor="@color/Black"
+                    android:textSize="14dp"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/open_sans_bold"
+                    />
+
 
                 <TextView
                     android:id="@+id/txt_estimate_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="8dp"
-                    android:fontFamily="@font/open_sans_bold"
-                    android:text="0.4 km"
-                    android:textAlignment="center"
-                    android:textColor="@color/Black"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_type_uber"
                     android:fontFamily="@font/open_sans_light"
-                    android:textColor="@color/lightGray"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="8dp"
-                    android:textSize="18dp"
-                    android:visibility="gone"
-                    android:text="Driver"/>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:gravity="center">
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/circularProgressBar"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        app:cpb_background_progressbar_color="@color/colorPrimary"
-                        app:cpb_background_progressbar_width="3dp"
-                        app:cpb_progress="0"
-                        app:cpb_progress_direction="to_right"
-                        app:cpb_progressbar_width="3dp"
-                        android:layout_gravity="center_horizontal"
-                        app:cpb_progressbar_color="@color/progress_bar_color"
-                        app:cpb_round_border="false"/>
-                    <ImageView
-                        android:id="@+id/img_round"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center_horizontal"
-                        android:clickable="false"
-                        app:tint="@color/colorPrimary"
-                        android:src="@drawable/ic_baseline_person_24"/>
+                    android:text="0.4 km"
+                    android:textColor="@color/Black"
+                    android:textSize="12dp" />
 
-                </RelativeLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/txt_estimate_time"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/open_sans_bold"
+                    android:fontFamily="@font/open_sans_light"
                     android:text="2 Min"
-                    android:textAlignment="center"
                     android:textColor="@color/Black"
-                    android:textSize="20dp"
+                    android:textSize="12dp"
                     />
 
                 <TextView
@@ -198,21 +229,43 @@
                     android:textColor="@color/lightGray"
                     android:textSize="18dp"
                     android:drawableRight="@drawable/ic_baseline_star_24"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txt_estimate_price"
+                    android:fontFamily="@font/open_sans_bold"
+                    android:layout_marginTop="4dp"
+                    android:text="2 ribu"
+                    android:textColor="@color/Black"
+                    android:textSize="12dp"
+                    />
             </LinearLayout>
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txt_estimate_price"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/open_sans_light"
-                android:layout_marginTop="4dp"
-                android:text="2 Min"
-                android:layout_marginLeft="6dp"
-                android:textAlignment="center"
-                android:textColor="@color/Black"
-                android:textSize="16dp"
-                />
+                android:paddingLeft="60dp"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Terima"
+                    android:textAllCaps="false"
+                    android:padding="8dp"
+                    android:backgroundTint="@color/greenbutton"
+                    android:id="@+id/btn_accept"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tolak"
+                    android:textAllCaps="false"
+                    android:padding="8dp"
+                    android:backgroundTint="@color/unpressed_color"
+                    android:id="@+id/btn_decline"/>
+            </LinearLayout>
+
+
 
 
 
