--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212020"
+    android:background="@color/white"
     tools:context=".SplashScreenActivity">
 
     <TextView
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_bold"
-        android:text="GO POS"
-        android:textColor="@color/lightGray"
+        android:text="Gosami"
+        android:textColor="@color/colorPrimary"
         android:textSize="56dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginBottom="28dp"
         android:fontFamily="@font/open_sans_light"
         android:text="Driver"
-        android:textColor="@color/white"
+        android:textColor="@color/colorPrimary"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="335dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:src="@drawable/applogo"
+        android:src="@drawable/gosami_logo2"
         app:layout_constraintBottom_toTopOf="@+id/progress_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:indeterminateTint="#FF6600"
+        android:indeterminateTint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
