--- a/app/src/main/res/layout/activity_verify_driver.xml
+++ b/app/src/main/res/layout/activity_verify_driver.xml
@@ -7,9 +7,11 @@
     tools:context=".VerifyDriverActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:orientation="vertical"
         android:padding="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -17,10 +19,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/open_sans_light"
-            android:text="Mohon melengkapi langkah-langkah berikut untuk menjadi mitra Driver Go Pos"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="Akun Anda sedang diverifikasi. Mohon mengikuti langkah-langkah berikut: "
             android:textColor="@color/white"
             android:textSize="24sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/open_sans_light"
+            android:text="1. Datang ke kantor dengan membawa KTP, STNK, KK, Surat Izin Mengemudi, dan Kendaraan.\n\n2. Mengikuti tes mengemudi di kantor.\n\n3. Anda akan mendapatkan email konfirmasi bila sudah dinyatakan lulus dan secara otomatis dapat menggukana aplikasi GO POS Driver sebagai mitra."
+            android:textColor="@color/Black"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
