--- a/app/src/main/res/layout/layout_sign_in.xml
+++ b/app/src/main/res/layout/layout_sign_in.xml
@@ -2,21 +2,19 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@color/white"
     android:padding="16dp">
 
     <ImageView
-        android:layout_width="257dp"
-        android:layout_height="391dp"
+        android:layout_width="232dp"
+        android:layout_height="271dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="143dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginBottom="266dp"
-        android:src="@drawable/applogo" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:src="@drawable/gosami_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
