--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF6600</color>
-    <color name="colorPrimaryDark">#FF6600</color>
-    <color name="colorAccent">#FF6600</color>
+    <color name="colorPrimary">#00a2ea</color>
+    <color name="colorPrimaryDark">#0074b7</color>
+    <color name="colorAccent">#64d3ff</color>
     <color name="lightGray">#ECECEC</color>
     <color name="blue">#5C9DC0</color>
     <color name="space">#181C1F</color>
@@ -11,4 +11,6 @@
     <color name="startuber">#227159</color>
     <color name="blackpos">#212020</color>
     <color name="greenbutton">#4CAF50</color>
+    <color name="colorItemLeft">#E6E4E4</color>
+    <color name="colorItemRight">#813fd7</color>
 </resources>
