--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,18 +15,16 @@
 
         <ImageView
             android:id="@+id/imgBack"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:padding="5dp"
             android:src="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
             android:id="@+id/tvUserName"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:fontFamily="@font/open_sans_bold"
             android:text=""
             android:textSize="15sp"
