--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -22,7 +22,7 @@
                 android:fontFamily="@font/open_sans_bold"
                 android:gravity="center"
                 android:text="@string/register_text"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="22dp" />
 
 
@@ -299,7 +299,7 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:fontFamily="@font/open_sans_light"
                 android:text="Continue"
-                android:textColor="@color/lightGray" />
+                android:textColor="@color/colorPrimaryDark" />
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
