--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_margin="8dp"
-        android:textColor="@color/Black"
-        android:padding="4dp"
-        android:background="@color/blue"
-        android:textSize="16sp"
         android:id="@+id/messageAdapterMessageItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@color/blue"
+        android:padding="4dp"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
 </LinearLayout>
