--- a/app/src/main/res/layout/nav_header_driver_home.xml
+++ b/app/src/main/res/layout/nav_header_driver_home.xml
@@ -13,14 +13,13 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_marginTop="40dp"
         android:id="@+id/img_avatar"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginTop="40dp"
         android:src="@mipmap/ic_launcher_round"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/lightGray"
-        />
+        app:civ_border_color="@color/colorPrimaryDark"
+        app:civ_border_width="1dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,48 +31,54 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:src="@drawable/ic_baseline_star_24"/>
+            android:src="@drawable/ic_baseline_star_24"
+            app:tint="@color/colorPrimaryDark" />
+
         <TextView
-            android:fontFamily="@font/open_sans_light"
             android:id="@+id/txt_star"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/open_sans_light"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="0.0"
-            android:layout_gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/colorPrimaryDark" />
 
     </LinearLayout>
 
     <TextView
-        android:fontFamily="@font/open_sans_bold"
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/open_sans_bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
-        android:fontFamily="@font/open_sans_light"
         android:id="@+id/txt_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:fontFamily="@font/open_sans_light"
+        android:text="@string/nav_header_subtitle"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/open_sans_bold"
         android:id="@+id/txt_motor_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/lightGray"
-        android:text="aerox" />
-    <TextView
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/open_sans_bold"
+        android:text="aerox"
+        android:textColor="@color/colorPrimaryDark" />
+
+    <TextView
         android:id="@+id/txt_vehicle_number"
         android:layout_width="wrap_content"
-        android:textColor="@color/lightGray"
         android:layout_height="wrap_content"
-        android:text="B 1234 WOK" />
+        android:fontFamily="@font/open_sans_bold"
+        android:text="B 1234 WOK"
+        android:textColor="@color/colorPrimaryDark" />
 </LinearLayout>
